--- a/estilos.css
+++ b/estilos.css
@@ -1,1 +1,6 @@
-body {background-color:#f00;}
+body {background-color:#e7ae63;}
+body div.margem2 {
+    background: rgb(0, 0, 0);
+    color: rgb(211, 0, 0);
+    padding: 100px;
+}
