--- a/estilos.css
+++ b/estilos.css
@@ -1,7 +1,10 @@
-body {background-color:#e7ae63;}
-
 body {
-    background-color: #643effde;
-    color: white;
+    background-color: #fcf15fde;
+    color: rgb(0, 0, 0);
 } 
-  
+ body {margin: 10px 50px 20px 0;
+ }
+ h1 {color: rgb(0, 0, 0); font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+    ;font-size:xx-large;text-align: center;}
+p {font-size: large; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;}
+span {font-size: x-large;text-align: center;}
