--- a/estilos.css
+++ b/estilos.css
@@ -2,7 +2,7 @@ body {
     background-color: #fcf15fde;
     color: rgb(0, 0, 0);
 } 
- body {margin: 10px 50px 20px 0;
+ body {margin: 10px 50px 20px 0;;
  }
  h1 {color: rgb(0, 0, 0); font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
     ;font-size:xx-large;text-align: center;}
